[locationinfo] Update translations

--- a/modules-available/locationinfo/lang/de/template-tags.json
+++ b/modules-available/locationinfo/lang/de/template-tags.json
@@ -1,6 +1,5 @@
 {
     "lang_addServer": "Server",
-    "lang_areYouSure": "Sind Sie sicher?",
     "lang_autoScale": "Auto Tage",
     "lang_autoscaleTooltip": "Berechnet anhand der Bildschirmbreite die optimale Anzahl an Tagen, die der Kalender anzeigt",
     "lang_backend": "Backend",
@@ -29,9 +28,9 @@
     "lang_entryName": "Name",
     "lang_error": "Fehler",
     "lang_expertMode": "Expertenmodus",
+    "lang_for": "f\u00fcr",
     "lang_fourLocsHint": "Hier k\u00f6nnen Sie bis zu vier Orte ausw\u00e4hlen, die in diesem Panel angezeigt werden.",
-    "lang_free": "Geöffnet",
-    "lang_for": "für",
+    "lang_free": "Ge\u00f6ffnet",
     "lang_general": "Allgemein",
     "lang_ignoreSslTooltip": "Akzeptiere ung\u00fcltige, abgelaufene oder selbstsignierte SSL-Zertifikate",
     "lang_insecureSsl": "Unsicheres SSL",
@@ -51,6 +50,7 @@
     "lang_longThu": "Donnerstag",
     "lang_longTue": "Dienstag",
     "lang_longWed": "Mittwoch",
+    "lang_message": "Meldung",
     "lang_mode": "Modus",
     "lang_mode1": "Kalender & Raum",
     "lang_mode2": "Kalender",
@@ -79,7 +79,7 @@
     "lang_room": "Raum",
     "lang_roomId": "Raum ID",
     "lang_roomIdTooltip": "Die Raum ID, die der Server ben\u00f6tigt, um Kalenderdaten abzurufen (bei Exchange die Postfachadresse)",
-    "lang_roomplannerTooltip": "Nur PCs berücksichtigen, die im Raumplaner gesetzt wurden",
+    "lang_roomplannerTooltip": "Nur PCs ber\u00fccksichtigen, die im Raumplaner gesetzt wurden",
     "lang_roomupdateTooltip": "Zeit nach der die PCs aktualisiert werden (in Sekunden)",
     "lang_rotation": "Rotation",
     "lang_rotation0": "0\u00b0",
@@ -93,6 +93,7 @@
     "lang_scaleTooltip": "[10-90] Legt die Kalenderbreite fest (in Prozent)",
     "lang_sec": "sek",
     "lang_server": "Server",
+    "lang_serverLogHead": "Fehlerprotokoll",
     "lang_serverTable": "Backend-Server verwalten",
     "lang_serverTableHints": "Liste aller definierten Backend-Server. Diese werden ben\u00f6tigt, um Belegungspl\u00e4ne f\u00fcr R\u00e4ume abzurufen.",
     "lang_serverTooltip": "Legt fest, von welchem Backend-Server die Kalenderdaten bezogen werden",
@@ -111,7 +112,9 @@
     "lang_shortTuesday": "Di",
     "lang_shortWed": "Mi",
     "lang_shortWednesday": "Mi",
+    "lang_showLog": "Log",
     "lang_summaryPanel": "\u00dcbersichts-Panel",
+    "lang_summaryUpdateIntervalTooltip": "Aktualisierungsintervall (Sekunden)",
     "lang_sunday": "Sonntag",
     "lang_switchTime": "Wechselintervall",
     "lang_switchTimeTooltip": "[1-120] Legt die Zeit fest, die vergeht bis ein Wechsel erfolgt (in Sekunden)",
@@ -123,5 +126,6 @@
     "lang_urlTooltip": "URL die aufgerufen wird",
     "lang_useRoomplanner": "Raumplaner benutzen",
     "lang_vertical": "Vertikaler Modus",
-    "lang_verticalTooltip": "Legt fest, ob Kalender und Raum \u00fcbereinander angezeigt werden sollen"
+    "lang_verticalTooltip": "Legt fest, ob Kalender und Raum \u00fcbereinander angezeigt werden sollen",
+    "lang_when": "Wann"
 }
