--- a/modules-available/serversetup-bwlp-ipxe/lang/en/template-tags.json
+++ b/modules-available/serversetup-bwlp-ipxe/lang/en/template-tags.json
@@ -18,6 +18,7 @@
     "lang_chooseIP": "Please select the IP address that the client server will use to boot.",
     "lang_commandLine": "Command line",
     "lang_count": "Count",
+    "lang_createUsbImage": "Create bootable thumb drive",
     "lang_downloadBootImage": "Download boot-image",
     "lang_downloadRufus": "Download Rufus",
     "lang_editBuiltinWarn": "WARNING! You're editing a predefined item. Future updates might reset your changes!",
@@ -66,9 +67,7 @@
     "lang_title": "Title",
     "lang_typeExecEntry": "Standardeintrag",
     "lang_typeScriptEntry": "Custom script",
-    "lang_usbImage": "USB image",
     "lang_usbImgHelp": "The USB image can be used to create a bootable USB stick, which enables you to boot bwLehrpool without changing your DHCP settings or enabling network boot in the clients. The only requirement is that you enable USB boot in the client's BIOS. The USB stick is only used for bootstrapping, the actual bwLehrpool system is still loaded via network from your local bwLehrpool server.",
-    "lang_usbImgHelpBtn": "Create bootable thumb drive",
     "lang_usbImgHelpLinux": "On Linux you can simply use dd to write the image to a usb stick. The image already contains a partition table, so make sure you write the image to the device itself and not to an already existing partition (e.g. to \/dev\/sdx not \/dev\/sdx1)",
     "lang_usbImgHelpWindows": "On Windows you need to use a 3rd party tool that can directly write to usb sticks. There are several free and open source soltions, one of them being Rufus. Rufus has been tested with the bwLehrpool image and is very simple to use. After launching Rufus, just open the downloaded USB image, select the proper USB stick to write to (be careful not to overwrite the wrong drive!), and you're ready to go.",
     "lang_useDefaultMenu": "Inherit from parent location",
