--- a/modules-available/serversetup-bwlp-ipxe/lang/en/template-tags.json
+++ b/modules-available/serversetup-bwlp-ipxe/lang/en/template-tags.json
@@ -35,6 +35,7 @@
     "lang_hotkey": "Hotkey",
     "lang_idFormatHint": "(16 chars max, a-z 0-9 - _)",
     "lang_imageToLoad": "Image to load (e.g. kernel)",
+    "lang_import": "Import",
     "lang_initRd": "Optional initrd\/initramfs to load",
     "lang_ipxeWikiUrl": "at the iPXE wiki",
     "lang_isDefault": "Default",
@@ -56,6 +57,10 @@
     "lang_none": "(none)",
     "lang_ok": "OK",
     "lang_override": "Override",
+    "lang_pxeMenuContent": "pxelinux.cfg\/ menu definition",
+    "lang_pxelinuxEntriesOnly": "Import menu entries only, don't create menu",
+    "lang_pxelinuxImport": "Import PXELinux menu",
+    "lang_pxelinuxImportIntro": "Here you can paste a pxelinux menu to convert it to an iPXE menu.",
     "lang_recompileHint": "Recompile iPXE binaries now. Usually this happens automatically on changes, but if you suspect problems caused by outdated binaries, you can trigger recompilation here.",
     "lang_refCount": "References",
     "lang_referencingMenus": "Referencing menus",
