--- a/modules-available/serversetup-bwlp-ipxe/lang/de/module.json
+++ b/modules-available/serversetup-bwlp-ipxe/lang/de/module.json
@@ -14,6 +14,7 @@
     "submenu_address": "Server-Adresse",
     "submenu_bootentry": "Men\u00fceintr\u00e4ge verwalten",
     "submenu_download": "Downloads",
+    "submenu_import": "Importieren",
     "submenu_localboot": "HDD-Boot",
     "submenu_menu": "Men\u00fcs verwalten"
 }
