--- a/modules-available/serversetup-bwlp-ipxe/lang/de/template-tags.json
+++ b/modules-available/serversetup-bwlp-ipxe/lang/de/template-tags.json
@@ -30,11 +30,12 @@
     "lang_execAutoUnload": "Nach Ausf\u00fchrung entladen (--autofree)",
     "lang_execReplace": "Aktuellen iPXE-Stack erstzen (--replace)",
     "lang_execResetConsole": "Konsole vor Ausf\u00fchrung zur\u00fccksetzen",
-    "lang_forceRecompile": "Jetzt neu compilieren",
+    "lang_forceRecompile": "Jetzt neu kompilieren",
     "lang_generationFailed": "Erzeugen des Bootmen\u00fcs fehlgeschlagen. Der Netzwerkboot von bwLehrpool wird wahrscheinlich nicht funktionieren. Wenn Sie den Fehler nicht selbst beheben k\u00f6nnen, melden Sie bitte die Logausgabe an das bwLehrpool-Projekt.",
     "lang_hotkey": "Hotkey",
     "lang_idFormatHint": "(Max. 16 Zeichen, nur a-z 0-9 - _)",
     "lang_imageToLoad": "Zu ladendes Image (z.B. Kernel)",
+    "lang_import": "Importieren",
     "lang_initRd": "Zu ladendes initramfs",
     "lang_ipxeWikiUrl": "im iPXE Wiki",
     "lang_isDefault": "Standard",
@@ -56,6 +57,10 @@
     "lang_none": "(keine)",
     "lang_ok": "OK",
     "lang_override": "\u00dcberschreiben",
+    "lang_pxeMenuContent": "pxelinux.cfg\/ Men\u00fcdefinition",
+    "lang_pxelinuxEntriesOnly": "Nur Eintr\u00e4ge importieren, kein Men\u00fc erzeugen",
+    "lang_pxelinuxImport": "PXE-Men\u00fc importieren",
+    "lang_pxelinuxImportIntro": "Hier k\u00f6nnen Sie ein PXE-Men\u00fc einf\u00fcgen und in entsprechende Men\u00fceintr\u00e4ge f\u00fcr iPXE umwandeln lassen.",
     "lang_recompileHint": "iPXE-Binaries jetzt neu kompilieren. Normalerweise wird dieser Vorgang bei \u00c4nderungen automatisch ausgef\u00fchrt. Sollten Bootprobleme auftreten, k\u00f6nnen Sie hier den Vorgang manuell ansto\u00dfen.",
     "lang_refCount": "Referenzen",
     "lang_referencingMenus": "Verkn\u00fcpfte Men\u00fcs",
