[dozmod] Update translations

--- a/modules-available/dozmod/lang/de/template-tags.json
+++ b/modules-available/dozmod/lang/de/template-tags.json
@@ -28,7 +28,7 @@
     "lang_dozmodLogHeading": "bwLehrpool-Suite Aktionslog",
     "lang_editNetworkrule": "Netzwerkregel bearbeiten",
     "lang_editNetworkshare": "Netzlaufwerk bearbeiten",
-    "lang_editScript": "Startscript bearbeiten",
+    "lang_editScript": "Startskript bearbeiten",
     "lang_email": "EMail",
     "lang_emailNotifications": "EMail-Benachrichtigungen aktiviert",
     "lang_error": "Fehler",
