[dnbd3] Mark proxy connections in client list

--- a/modules-available/dnbd3/lang/de/template-tags.json
+++ b/modules-available/dnbd3/lang/de/template-tags.json
@@ -33,6 +33,7 @@
     "lang_global": "Global",
     "lang_image": "Image",
     "lang_imageList": "Image-Liste",
+    "lang_isProxy": "DNBD3 Proxy",
     "lang_lastSeen": "Letzte Aktivit\u00e4t",
     "lang_latency": "Latenz",
     "lang_location": "Ort",
