--- a/modules-available/dnbd3/lang/en/template-tags.json
+++ b/modules-available/dnbd3/lang/en/template-tags.json
@@ -33,6 +33,7 @@
     "lang_global": "Global",
     "lang_image": "Image",
     "lang_imageList": "Image list",
+    "lang_isProxy": "DNBD3 proxy",
     "lang_lastSeen": "Last seen",
     "lang_latency": "Latency",
     "lang_location": "Location",
