[locationinfo] Update translations

--- a/modules-available/locationinfo/lang/de/template-tags.json
+++ b/modules-available/locationinfo/lang/de/template-tags.json
@@ -122,8 +122,11 @@
     "lang_typeTooltip": "Legt fest um welchen Server-Typ es sich handelt",
     "lang_updateRates": "Aktualisierungsintervall",
     "lang_url": "URL",
+    "lang_urlBlacklist": "Blacklist",
+    "lang_urlListHelp": "Sie k\u00f6nnen hier eine Liste von URLs oder Hostnamen angeben, die dann entweder als Whitelist oder Blacklist interpretiert wird. Unterst\u00fctzt werden die Sonderzeichen '?' (ein beliebiges Zeichen), '*' (beliebig viele Zeichen, au\u00dfer '\/') und '**' (beliebig viele Zeichen, inkl. '\/') als Platzhalter. Beispielangaben sind \"*.wikipedia.org\", \"https:\/\/www.bwlehrpool.de\/**\" oder \"*:\/\/*.uni-freiburg.de\/*.html\".",
     "lang_urlPanel": "URL-Panel",
     "lang_urlTooltip": "URL die aufgerufen wird",
+    "lang_urlWhitelist": "Whitelist",
     "lang_useRoomplanner": "Raumplaner benutzen",
     "lang_vertical": "Vertikaler Modus",
     "lang_verticalTooltip": "Legt fest, ob Kalender und Raum \u00fcbereinander angezeigt werden sollen",
