--- a/modules-available/locationinfo/lang/en/template-tags.json
+++ b/modules-available/locationinfo/lang/en/template-tags.json
@@ -122,8 +122,11 @@
     "lang_typeTooltip": "Defines on which type of server you want to connect to",
     "lang_updateRates": "Update rates",
     "lang_url": "URL",
+    "lang_urlBlacklist": "Blacklist",
+    "lang_urlListHelp": "You can specify a list of URLs or host names that will be used as either a blacklist or a whitelist. You can use the special characters '?' to represent any character, '*' to represent any number of characters excluding '\/', or '**' meaning any number of characters, including '\/'. Examples are \"*.wikipedia.org\", \"https:\/\/www.bwlehrpool.de\/**\" or \"*:\/\/*.uni-freiburg.de\/*.html\".",
     "lang_urlPanel": "URL panel",
     "lang_urlTooltip": "URL which is shown by the panel",
+    "lang_urlWhitelist": "Whitelist",
     "lang_useRoomplanner": "Use roomplans",
     "lang_vertical": "Vertical mode",
     "lang_verticalTooltip": "Defines whether the room and calendar are shown above each other",
