[statistics/roomplanner] Add SVG roomplan generator
Show in machine details if machine is part of some location's room plan.

--- a/modules-available/statistics/lang/de/template-tags.json
+++ b/modules-available/statistics/lang/de/template-tags.json
@@ -73,6 +73,7 @@
     "lang_replaceMachinesHeading": "Rechner ersetzen",
     "lang_replaceNew": "Alter Rechner",
     "lang_replaceOld": "Neuer Rechner",
+    "lang_roomplan": "Raumplan",
     "lang_runMode": "Betriebsmodus",
     "lang_runmodeMachines": "Mit besonderem Betriebsmodus",
     "lang_runtimeHours": "Laufzeit (Stunden)",
