--- a/modules-available/statistics/lang/en/template-tags.json
+++ b/modules-available/statistics/lang/en/template-tags.json
@@ -73,6 +73,7 @@
     "lang_replaceMachinesHeading": "Replace machines",
     "lang_replaceNew": "Old machine",
     "lang_replaceOld": "New machine",
+    "lang_roomplan": "Location",
     "lang_runMode": "Mode of operation",
     "lang_runmodeMachines": "With special mode of operation",
     "lang_runtimeHours": "Runtime (hours)",
