[statistics] Feature: BIOS update info
Fetch list of known BIOS updates that fix issues wrt.
bwLehrpool/OpenSLX/whatever it's called today.

--- a/modules-available/statistics/lang/de/template-tags.json
+++ b/modules-available/statistics/lang/de/template-tags.json
@@ -3,6 +3,11 @@
     "lang_add": "Hinzuf\u00fcgen",
     "lang_add_filter": "Filter hinzuf\u00fcgen",
     "lang_address": "Adresse",
+    "lang_biosDate": "Ver\u00f6ffentlichungsdatum",
+    "lang_biosFixes": "BIOS-Fehlerkorrekturen",
+    "lang_biosUpdate": "BIOS Update",
+    "lang_biosUpdateLink": "Zur Herstellerseite",
+    "lang_biosVersion": "BIOS-Version",
     "lang_clientList": "Liste ausgew\u00e4hlter Rechner",
     "lang_cores": "Kerne",
     "lang_cpuCores": "CPU-Kerne",
