--- a/modules-available/statistics/lang/en/template-tags.json
+++ b/modules-available/statistics/lang/en/template-tags.json
@@ -3,6 +3,11 @@
     "lang_add": "Add",
     "lang_add_filter": "Add Filter",
     "lang_address": "Address",
+    "lang_biosDate": "Release date",
+    "lang_biosFixes": "BIOS fixes",
+    "lang_biosUpdate": "BIOS update",
+    "lang_biosUpdateLink": "Go to vendor's site",
+    "lang_biosVersion": "BIOS version",
     "lang_clientList": "List of selected machines",
     "lang_cores": "Cores",
     "lang_cpuCores": "CPU cores",
