[serversetup-bwlp-ipxe] Bootentry: add copy button & allow view only

--- a/modules-available/serversetup-bwlp-ipxe/lang/de/template-tags.json
+++ b/modules-available/serversetup-bwlp-ipxe/lang/de/template-tags.json
@@ -17,10 +17,12 @@
     "lang_bootentryTitle": "Men\u00fceintrag",
     "lang_chooseIP": "Bitte w\u00e4hlen Sie die IP-Adresse, \u00fcber die der Server von den Clients zum Booten angesprochen werden soll.",
     "lang_commandLine": "Command line",
+    "lang_copy": "Kopieren",
     "lang_count": "Anzahl",
     "lang_createUsbImage": "Bootbaren USB-Stick erstellen",
     "lang_downloadBootImage": "Boot-Image herunterladen",
     "lang_downloadRufus": "Rufus herunterladen",
+    "lang_editBootEntryHead": "Men\u00fceintrag bearbeiten",
     "lang_editBuiltinWarn": "Achtung! Sie bearbeiten einen der vorgegebenen Eintr\u00e4ge! Bei einem Update k\u00f6nnten Ihre \u00c4nderungen wieder \u00fcberschrieben werden",
     "lang_editMenuHead": "Men\u00fc bearbeiten",
     "lang_efiOnly": "Nur EFI",
