--- a/modules-available/serversetup-bwlp-ipxe/lang/en/template-tags.json
+++ b/modules-available/serversetup-bwlp-ipxe/lang/en/template-tags.json
@@ -10,17 +10,19 @@
     "lang_assignMenuToLocation": "Assign menu to location",
     "lang_biosOnly": "BIOS only",
     "lang_bootAddress": "Boot Address of the Server",
-    "lang_bootEntryData": "Menu entry data",
+    "lang_bootEntryData": "Menu item data",
     "lang_bootentryDeleteConfirm": "Are you sure you want to delete this menu item?",
     "lang_bootentryHead": "Menu items",
-    "lang_bootentryIntro": "This is where you can add, edit and remove menu items, which can be added to menus. A menu entry is either a combination of a kernel\/image to load (and an optional initrd), or a custom iPXE-script.",
+    "lang_bootentryIntro": "This is where you can add, edit and remove menu items, which can be added to menus. A menu item is either a combination of a kernel\/image to load (and an optional initrd), or a custom iPXE-script.",
     "lang_bootentryTitle": "Menu item",
     "lang_chooseIP": "Please select the IP address that the client server will use to boot.",
     "lang_commandLine": "Command line",
+    "lang_copy": "Copy",
     "lang_count": "Count",
     "lang_createUsbImage": "Create bootable thumb drive",
     "lang_downloadBootImage": "Download boot-image",
     "lang_downloadRufus": "Download Rufus",
+    "lang_editBootEntryHead": "Edit menu item",
     "lang_editBuiltinWarn": "WARNING! You're editing a predefined item. Future updates might reset your changes!",
     "lang_editMenuHead": "Edit menu",
     "lang_efiOnly": "EFI only",
@@ -58,7 +60,7 @@
     "lang_ok": "OK",
     "lang_override": "Override",
     "lang_pxeMenuContent": "pxelinux.cfg\/ menu definition",
-    "lang_pxelinuxEntriesOnly": "Import menu entries only, don't create menu",
+    "lang_pxelinuxEntriesOnly": "Import menu items only, don't create menu",
     "lang_pxelinuxImport": "Import PXELinux menu",
     "lang_pxelinuxImportIntro": "Here you can paste a pxelinux menu to convert it to an iPXE menu.",
     "lang_recompileHint": "Recompile iPXE binaries now. Usually this happens automatically on changes, but if you suspect problems caused by outdated binaries, you can trigger recompilation here.",
