[statistics] Add reboot/shutdown to list and details view

--- a/modules-available/statistics/lang/de/template-tags.json
+++ b/modules-available/statistics/lang/de/template-tags.json
@@ -73,6 +73,9 @@
     "lang_ramSlots": "Speicher-Slots",
     "lang_realCores": "Kerne",
     "lang_reallocatedSectors": "Defekte Sektoren",
+    "lang_reboot": "Neustart",
+    "lang_rebootConfirm": "Ausgew\u00e4hlte Rechner wirklich neustarten?",
+    "lang_rebootKexecCheck": "Schneller Reboot direkt in bwLehrpool (kexec)",
     "lang_replace": "Ersetzen",
     "lang_replaceInstructions": "Hier k\u00f6nnen Sie Metadaten automatisch \u00fcbertragen, wenn in einem Raum die Rechner ausgetauscht wurden. Dies setzt voraus, dass alle neuen Rechner die gleiche IP Adresse erhalten haben wie der Rechner, der zuvor am entsprechenden Platz stand, und die neuen Rechner alle einmal gestartet wurden. In der Liste unten sehen Sie alle Rechnerpaare, auf die folgendes zutrifft: 1) Die IP-Adressen sind identisch 2) Der letzte Boot des einen Rechners liegt vor dem ersten Boot des anderen Rechners. W\u00e4hlen Sie alle Rechnerpaare aus, f\u00fcr die eine Ersetzung stattfinden soll. Bei der Ersetzung werden alle Logeintr\u00e4ge, Sitzungslogs, Position im Raumplan und evtl. spezielle Betriebsmodi vom alten Rechner auf den neuen \u00dcbertragen.",
     "lang_replaceMachinesHeading": "Rechner ersetzen",
@@ -86,6 +89,8 @@
     "lang_serialNo": "Serien-Nr",
     "lang_showList": "Liste",
     "lang_showVisualization": "Visualisierung",
+    "lang_shutdown": "Herunterfahren",
+    "lang_shutdownConfirm": "Ausgew\u00e4hlte Rechner wirklich herunterfahren?",
     "lang_sockets": "Sockel",
     "lang_subnet": "Subnetz",
     "lang_sureDeletePermanent": "M\u00f6chten Sie diese(n) Rechner wirklich unwiderruflich aus der Datenbank entfernen?\r\n\r\nWichtig: L\u00f6schen verhindert nicht, dass ein Rechner nach erneutem Starten von bwLehrpool wieder in die Datenbank aufgenommen wird.",
