--- a/modules-available/statistics/lang/en/template-tags.json
+++ b/modules-available/statistics/lang/en/template-tags.json
@@ -73,6 +73,9 @@
     "lang_ramSlots": "Memory slots",
     "lang_realCores": "Cores",
     "lang_reallocatedSectors": "Bad sectors",
+    "lang_reboot": "Reboot",
+    "lang_rebootConfirm": "Reboot selected machines?",
+    "lang_rebootKexecCheck": "Quick reboot to bwLehrpool (kexec)",
     "lang_replace": "Replace",
     "lang_replaceInstructions": "If some PCs\/clients have been physically replaced, you can re-assign log entries, session data, position information etc. from the old machine to the new one. This requires that the new machine gets assigned the same IP address as the old one and, if the room planner is used -- that it is placed in the same spot as the old one. The list below shows all machine pairs where 1) the last boot of one machine lies before the first boot of the other one 2) both machines had the same IP address last time they booted. The replacement action will reassign all log events, room plan location and special run mode from the old machine to the new machine.",
     "lang_replaceMachinesHeading": "Replace machines",
@@ -86,6 +89,8 @@
     "lang_serialNo": "Serial no",
     "lang_showList": "List",
     "lang_showVisualization": "Visualization",
+    "lang_shutdown": "Shutdown",
+    "lang_shutdownConfirm": "Shutdown selected machines?",
     "lang_sockets": "Sockets",
     "lang_subnet": "Subnet",
     "lang_sureDeletePermanent": "Are your sure you want to delete the selected machine(s) from the database? This cannot be undone.\r\n\r\nNote: Deleting machines from the database does not prevent booting up bwLehrpool again, which would recreate their respective database entries.",
