--- a/modules-available/main/lang/de/categories.json
+++ b/modules-available/main/lang/de/categories.json
@@ -1,6 +1,7 @@
 {
     "beta": "Beta",
     "content": "Inhalt",
+    "etc": "Weiteres",
     "settings-client": "Einstellungen (Client)",
     "settings-server": "Einstellungen (Server)",
     "status": "Status"
