--- a/modules-available/main/lang/en/categories.json
+++ b/modules-available/main/lang/en/categories.json
@@ -1,6 +1,7 @@
 {
     "beta": "Beta",
     "content": "Content",
+    "etc": "More",
     "settings-client": "Settings (Client)",
     "settings-server": "Settings (Server)",
     "status": "Status"
