--- a/modules-available/dozmod/lang/de/messages.json
+++ b/modules-available/dozmod/lang/de/messages.json
@@ -25,6 +25,7 @@
     "networkshare-saved": "Netzlaufwerk gespeichert",
     "no-expired-images": "Keine Abgelaufenen VM-Versionen",
     "nothing-submitted": "Es wurde nichts \u00fcbermittelt",
+    "runscript-deleted": "Script gel\u00f6scht",
     "runscript-invalid-id": "Ung\u00fcltige Script-ID: {{0}}",
     "runscript-saved": "Script gespeichert",
     "runtimelimits-config-saved": "Einstellungen gespeichert",
