--- a/modules-available/locationinfo/lang/de/template-tags.json
+++ b/modules-available/locationinfo/lang/de/template-tags.json
@@ -9,6 +9,9 @@
     "lang_checkConnection": "Verbindung pr\u00fcfen",
     "lang_closed": "Geschlossen",
     "lang_closingTime": "Schlie\u00dfungszeit",
+    "lang_configOverride": "Konfiguration überschreiben",
+    "lang_countIp": "über IP-Adressbereich",
+    "lang_countRoomplan": "über Raumplaner",
     "lang_createPanel": "Panel anlegen",
     "lang_credentials": "Anmeldung",
     "lang_day": "Tag",
@@ -79,7 +82,7 @@
     "lang_room": "Raum",
     "lang_roomId": "Raum ID",
     "lang_roomIdTooltip": "Die Raum ID, die der Server ben\u00f6tigt, um Kalenderdaten abzurufen (bei Exchange die Postfachadresse)",
-    "lang_roomplannerTooltip": "Nur PCs ber\u00fccksichtigen, die im Raumplaner gesetzt wurden",
+    "lang_roomplannerTooltip": "Legt fest, ob Rechner anhand der Zuordnung über IP oder über den Raumplan gezählt werden",
     "lang_roomupdateTooltip": "Zeit nach der die PCs aktualisiert werden (in Sekunden)",
     "lang_rotation": "Rotation",
     "lang_rotation0": "0\u00b0",
@@ -127,7 +130,7 @@
     "lang_urlPanel": "URL-Panel",
     "lang_urlTooltip": "URL die aufgerufen wird",
     "lang_urlWhitelist": "Whitelist",
-    "lang_useRoomplanner": "Raumplaner benutzen",
+    "lang_useRoomplanner": "Rechner zählen",
     "lang_vertical": "Vertikaler Modus",
     "lang_verticalTooltip": "Legt fest, ob Kalender und Raum \u00fcbereinander angezeigt werden sollen",
     "lang_when": "Wann"
