--- a/modules-available/locationinfo/lang/en/template-tags.json
+++ b/modules-available/locationinfo/lang/en/template-tags.json
@@ -9,6 +9,9 @@
     "lang_checkConnection": "Check connection",
     "lang_closed": "Closed",
     "lang_closingTime": "Closing time",
+    "lang_configOverride": "Configuration override",
+    "lang_countIp": "by IP-Range",
+    "lang_countRoomplan": "by Roomplanner",
     "lang_createPanel": "Create panel",
     "lang_credentials": "Login",
     "lang_day": "Day",
@@ -79,7 +82,7 @@
     "lang_room": "Room",
     "lang_roomId": "Room ID",
     "lang_roomIdTooltip": "The ID of the room the server needs, for querying the calendar data (when using exchange the room mailbox)",
-    "lang_roomplannerTooltip": "Only consider PCs which were set in the roomplanner",
+    "lang_roomplannerTooltip": "Determine if PCs are counted on the basis of IP-range or by roomplanner",
     "lang_roomupdateTooltip": "Time the PCs in the room gets updated (in seconds)",
     "lang_rotation": "Rotation",
     "lang_rotation0": "0\u00b0",
@@ -127,7 +130,7 @@
     "lang_urlPanel": "URL panel",
     "lang_urlTooltip": "URL which is shown by the panel",
     "lang_urlWhitelist": "Whitelist",
-    "lang_useRoomplanner": "Use roomplans",
+    "lang_useRoomplanner": "Count PCs",
     "lang_vertical": "Vertical mode",
     "lang_verticalTooltip": "Defines whether the room and calendar are shown above each other",
     "lang_when": "When"
