[serversetup-bwlp-ipxe] Localboot: Individual settings for BIOS/EFI

--- a/modules-available/serversetup-bwlp-ipxe/lang/de/template-tags.json
+++ b/modules-available/serversetup-bwlp-ipxe/lang/de/template-tags.json
@@ -45,7 +45,7 @@
     "lang_localBootDefault": "Standardm\u00e4\u00dfig verwendete Methode, um von Festplatte zu booten",
     "lang_localBootExceptions": "Ausnahmen, pro Rechnermodell definierbar",
     "lang_localBootHead": "Boot von Festplatte",
-    "lang_localBootIntro": "Aus dem iPXE Bootmen\u00fc kann auf verschiedene Arten ein Boot von der prim\u00e4ren Festplatte ausgel\u00f6st werden. In den allermeisten F\u00e4llen ist die Einstellung \"AUTO\" ausreichend, bei bestimmten Rechnermodellen kann es allerdings erforderlich sein, eine der alternativen Methoden zu erzwingen. Falls Sie einem solchen Modell begegnen, k\u00f6nnen Sie im unteren Teil dieser Seite eine solche Ausnahme festlegen. In einigen F\u00e4llen l\u00e4sst sich das Problem auch durch ein BIOS-Update auf den entsprechenden Ger\u00e4ten beheben.",
+    "lang_localBootIntro": "Aus dem iPXE Bootmen\u00fc kann auf verschiedene Arten ein Boot von der prim\u00e4ren Festplatte ausgel\u00f6st werden. In den allermeisten F\u00e4llen ist die Einstellung SANBOOT (BIOS) bzw. EXIT (EFI) ausreichend, bei bestimmten Rechnermodellen kann es allerdings erforderlich sein, eine der alternativen Methoden zu erzwingen. Falls Sie einem solchen Modell begegnen, k\u00f6nnen Sie im unteren Teil dieser Seite eine solche Ausnahme festlegen. In einigen F\u00e4llen l\u00e4sst sich das Problem auch durch ein BIOS-Update auf den entsprechenden Ger\u00e4ten beheben.",
     "lang_locationCount": "Anzahl Orte",
     "lang_menuDeleteConfirm": "Sind Sie sicher, dass Sie dieses Men\u00fc l\u00f6schen wollen?",
     "lang_menuEntryOverride": "Standardeintrag \u00fcberschreiben",
@@ -58,7 +58,6 @@
     "lang_newMenu": "Neues Men\u00fc",
     "lang_none": "(keine)",
     "lang_ok": "OK",
-    "lang_override": "\u00dcberschreiben",
     "lang_pxeMenuContent": "pxelinux.cfg\/ Men\u00fcdefinition",
     "lang_pxelinuxEntriesOnly": "Nur Eintr\u00e4ge importieren, kein Men\u00fc erzeugen",
     "lang_pxelinuxImport": "PXE-Men\u00fc importieren",
