--- a/modules-available/serversetup-bwlp-ipxe/lang/en/template-tags.json
+++ b/modules-available/serversetup-bwlp-ipxe/lang/en/template-tags.json
@@ -45,7 +45,7 @@
     "lang_localBootDefault": "Default method to use for booting from disk",
     "lang_localBootExceptions": "Exceptions to the local boot method, defined per system model",
     "lang_localBootHead": "Boot from local disk",
-    "lang_localBootIntro": "There are several methods to trigger a local boot from the iPXE environment. In most cases, the \"AUTO\" setting will work, but with some system models it might be necessary to override the default behavior. In some instances, a BIOS update might resolve the issue as well.",
+    "lang_localBootIntro": "There are several methods to initiate a boot from the primary hard drive from within the iPXE environment. In most cases, the SANBOOT (BIOS) \/  EXIT (EFI) setting will work, but with some system models it might be necessary to override the default behavior. In some instances, a BIOS update might resolve the issue as well.",
     "lang_locationCount": "Number of Locations",
     "lang_menuDeleteConfirm": "Are you sure you want to delete this menu?",
     "lang_menuEntryOverride": "Override default selection",
@@ -58,7 +58,6 @@
     "lang_newMenu": "New menu",
     "lang_none": "(none)",
     "lang_ok": "OK",
-    "lang_override": "Override",
     "lang_pxeMenuContent": "pxelinux.cfg\/ menu definition",
     "lang_pxelinuxEntriesOnly": "Import menu items only, don't create menu",
     "lang_pxelinuxImport": "Import PXELinux menu",
