[locationinfo] rearrange default-panel settings in UI

--- a/modules-available/locationinfo/lang/de/template-tags.json
+++ b/modules-available/locationinfo/lang/de/template-tags.json
@@ -5,6 +5,7 @@
     "lang_backend": "Backend",
     "lang_backends": "Backends",
     "lang_calendar": "Kalender",
+    "lang_calendarUpdate": "Kalender Update",
     "lang_calupdateTooltip": "Zeit nachdem der Kalender aktualisiert wird (in Minuten)",
     "lang_checkConnection": "Verbindung pr\u00fcfen",
     "lang_closed": "Geschlossen",
@@ -35,6 +36,7 @@
     "lang_fourLocsHint": "Hier k\u00f6nnen Sie bis zu vier Orte ausw\u00e4hlen, die in diesem Panel angezeigt werden.",
     "lang_free": "Ge\u00f6ffnet",
     "lang_general": "Allgemein",
+    "lang_generalSettings": "Allgemeine Einstellungen",
     "lang_ignoreSslTooltip": "Akzeptiere ung\u00fcltige, abgelaufene oder selbstsignierte SSL-Zertifikate",
     "lang_insecureSsl": "Unsicheres SSL",
     "lang_language": "Sprache",
@@ -84,6 +86,7 @@
     "lang_roomIdTooltip": "Die Raum ID, die der Server ben\u00f6tigt, um Kalenderdaten abzurufen (bei Exchange die Postfachadresse)",
     "lang_roomplannerTooltip": "Legt fest, ob Rechner anhand der Zuordnung über IP oder über den Raumplan gezählt werden",
     "lang_roomupdateTooltip": "Zeit nach der die PCs aktualisiert werden (in Sekunden)",
+    "lang_roomUpdate": "Raum Update",
     "lang_rotation": "Rotation",
     "lang_rotation0": "0\u00b0",
     "lang_rotation1": "90\u00b0 \u27f2",
