--- a/modules-available/locationinfo/lang/en/template-tags.json
+++ b/modules-available/locationinfo/lang/en/template-tags.json
@@ -5,6 +5,7 @@
     "lang_backend": "Backend",
     "lang_backends": "Backends",
     "lang_calendar": "Calendar",
+    "lang_calendarUpdate": "Calendar Update",
     "lang_calupdateTooltip": "Time the calender querys for updates (in minutes)",
     "lang_checkConnection": "Check connection",
     "lang_closed": "Closed",
@@ -35,6 +36,7 @@
     "lang_fourLocsHint": "You can pick up to four locations that will be shown in this panel.",
     "lang_free": "Open",
     "lang_general": "General",
+    "lang_generalSettings": "General Settings",
     "lang_ignoreSslTooltip": "Accept invalid, expired or self-signed ssl certificates",
     "lang_insecureSsl": "Insecure SSL",
     "lang_language": "Language",
@@ -84,6 +86,7 @@
     "lang_roomIdTooltip": "The ID of the room the server needs, for querying the calendar data (when using exchange the room mailbox)",
     "lang_roomplannerTooltip": "Determine if PCs are counted on the basis of IP-range or by roomplanner",
     "lang_roomupdateTooltip": "Time the PCs in the room gets updated (in seconds)",
+    "lang_roomUpdate": "Room Update",
     "lang_rotation": "Rotation",
     "lang_rotation0": "0\u00b0",
     "lang_rotation1": "90\u00b0 \u27f2",
