[locationinfo] Update translations

--- a/modules-available/locationinfo/lang/de/backend-exchange.json
+++ b/modules-available/locationinfo/lang/de/backend-exchange.json
@@ -3,8 +3,8 @@
     "clientVersion_helptext": "Eingesetzte Exchange Version",
     "password": "Passwort",
     "password_helptext": "Passwort des Nutzers in Exchange",
-    "serverAddress": "Server-IP",
-    "serverAddress_helptext": "IP-Adresse des Exchange Servers",
+    "serverAddress": "IP\/Hostname",
+    "serverAddress_helptext": "IP-Adresse oder Hostname des Exchange Servers",
     "username": "Benutzername",
     "username_helptext": "Benutzer muss mind. Reviewer Rechte auf Kalender besitzen",
     "verifyCert": "Zertifikat pr\u00fcfen",
